examples/misc/error/compilation/gen_shift-interfere.bfr
codegen $

$build {
  a: array(3) {
    i: index;
    b: array(2) {
      i: index;
    };
  };
}

$dive a@i
$alloc { x: cell; }

$dive a@i:b@i
$alloc { y: cell; }
> a@i
